macos bug fix
修复macos中无法打开文件的bug